@@ -1,3 +1,8 @@
+2009-03-06  Badlop  <badlop@process-one.net>
+
+	* src/eldap/eldap.erl: Close a connection on tcp_error (thanks to
+	Evgeniy Khramtsov)
+
 2009-03-05  Badlop  <badlop@process-one.net>
 
 	* src/ejabberd_app.erl: In a Windows machine, explicitly add the
